import net.darkhax.curseforgegradle.TaskPublishCurseForge

plugins {
    id 'net.fabricmc.fabric-loom'
    id 'maven-publish'
    id "com.modrinth.minotaur"
    id 'net.darkhax.curseforgegradle'
}

version = project.mod_version
group = mod_group_id
base {
    archivesName = mod_id
}

def changelogText = project.file('changelog.md').text
def site_debugMode = false

repositories {
    maven { url = "https://maven.maxhenkel.de/repository/public" }
    maven { url = "https://api.modrinth.com/maven" }
    mavenCentral()
}


loom {

}


dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    implementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"



    // Voice Chat
    implementation "de.maxhenkel.voicechat:voicechat-api:${voicechat_api_version}"
    runtimeOnly "de.maxhenkel.voicechat:voicechat-api:${voicechat_api_version}:fabric-stub"
    runtimeOnly "maven.modrinth:simple-voice-chat:fabric-${voicechat_mod_version}"

    // Config
    compileOnly "com.electronwill.night-config:toml:3.6.0"

    // Forge Config API Port
    implementation  "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_port_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.mod_group_id}" }
    }
}

tasks.register('publishCurseForge', TaskPublishCurseForge) {
    apiToken = System.getenv("CURSEFORGE_TOKEN")

    def mainFile = upload('1173633', file("build/libs/${mod_id}-${mod_version}.jar"))
    mainFile.displayName = "${mod_name}-${mod_version}"
    mainFile.releaseType = 'beta'
    mainFile.changelog = changelogText
    debugMode = site_debugMode

    mainFile.addRequirement("simple-voice-chat")
    mainFile.addRequirement("forge-config-api-port")
    mainFile.addRequirement("modmenu")
    //mainFile.addOptional("sound-physics-remastered")
}


modrinth {
    token = System.getenv("MODRINTH_TOKEN")// Remember to have the MODRINTH_TOKEN environment variable set or else this will fail - just make sure it stays private!
    projectId = "voiceless-survival" // This can be the project ID or the slug. Either will work!
    versionName = "${mod_name} ${mod_version}"
    versionNumber = "${mod_version}"
    versionType = "beta" // This is the default -- can also be `beta` or `alpha`
    uploadFile = file("build/libs/${mod_id}-${mod_version}.jar") // With Loom, this MUST be set to `remapJar` instead of `jar`!
    gameVersions = ["${minecraft_version}"] as Iterable<? extends String>
    // Must be an array, even with only one version
    loaders = ["fabric"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
    changelog = changelogText
    debugMode = site_debugMode


    dependencies { // A special DSL for creating dependencies
        required.project "fabric-api"
        required.project 'simple-voice-chat'
        required.project 'forge-config-api-port'
        required.project 'modmenu'
        //optional.project 'timeless-and-classics-zero'
    }
}



// This task is for uploading to the site above this code
tasks.register('publicModdedSite') {
    dependsOn 'build'
    dependsOn 'publishCurseForge'
    dependsOn 'modrinth'
}